--- a/mgExternal.css
+++ b/mgExternal.css
@@ -1,35 +1,34 @@
 /*** mgExternal ***/
 
-/* Style: default modal (Google+) */
+/* Style: default modal */
 .modal .mgExternal-data {
 	background-color: #fff;
 	border: 3px solid #aaa;
-	color: #000;
+	-webkit-border-radius: 2px;
+	   -moz-border-radius: 2px;
+	        border-radius: 2px;
+	overflow: auto;
 	padding: 35px 40px;
 	}
 
 .boxshadow .modal .mgExternal-data {
 	border-width: 1px;
-	-webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-	   -moz-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-	        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+	-webkit-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+	   -moz-box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
+	        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
 	}
 
-/* Style: default tooltip (Google+) */
+/* Style: default tooltip */
 .tooltip .mgExternal-data {
 	background-color: #fff;
-	border: 1px solid #bbb;
+	border: 1px solid #aaa;
 	-webkit-border-radius: 2px;
 	   -moz-border-radius: 2px;
 	        border-radius: 2px;
-	color: #000;
+	-webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+	   -moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+	        box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
 	padding: 15px;
-	}
-
-.boxshadow .tooltip .mgExternal-data {
-	-webkit-box-shadow: 0 1px 5px #ccc;
-	   -moz-box-shadow: 0 1px 5px #ccc;
-	        box-shadow: 0 1px 5px #ccc;
 	}
 
 .tooltip .mgExternal-arrow-shadow {
@@ -39,9 +38,13 @@
 /* Style: tipsy */
 .tipsy .mgExternal-data {
 	background-color: #333;
+	border: none;
 	-webkit-border-radius: 4px;
 	   -moz-border-radius: 4px;
 	        border-radius: 4px;
+	-webkit-box-shadow: none;
+	   -moz-box-shadow: none;
+	        box-shadow: none;
 	color: #fff;
 	font-size: 11px;
 	padding: 8px 10px;
