--- a/mgExternal.css
+++ b/mgExternal.css
@@ -61,7 +61,7 @@ body { overflow-y: scroll; }
 	max-height: 360px;
 	min-width: 130px;
 	overflow: auto;
-	padding: 6px 0;
+	padding: 10px 0;
 }
 
 .mgE-options ul {
@@ -81,7 +81,7 @@ body { overflow-y: scroll; }
 .mgE-options a {
 	color: #333;
 	display: block;
-	padding: 2px 30px;
+	padding: 6px 60px 6px 30px;
 	text-decoration: none;
 	white-space: nowrap;
 }
@@ -89,4 +89,6 @@ body { overflow-y: scroll; }
 .mgE-options a:hover,
 .mgE-options li.selected a {
 	background-color: #eee;
+	color: #333;
+	text-decoration: none;
 }
