--- a/mgExternal.css
+++ b/mgExternal.css
@@ -81,9 +81,9 @@ body { overflow-y: scroll; }
 .mgE-options a {
 	color: #333;
 	display: block;
+	max-width: 180px;
 	padding: 6px 60px 6px 30px;
 	text-decoration: none;
-	white-space: nowrap;
 }
 
 .mgE-options a:hover,
